force-app/main/default/objects/Forecast__c/fields/Budget_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tonnage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated by workflow from Budget Units</description>
    <label>Budget Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>