force-app/main/default/objects/Forecast__c/fields/Budget_Tonnage_Display__c.field-meta.xml
<CustomField>
    <fullName>Budget_Tonnage_Display__c</fullName>
    <formula>Budget_Tonnage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>