force-app/main/default/objects/Forecast__c/fields/First_Week_of_Month__c.field-meta.xml
<CustomField>
    <fullName>First_Week_of_Month__c</fullName>
    <formula>Month__r.First_Week_of_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>First Week of Month</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>