force-app/main/default/objects/Forecast__c/fields/Forecast_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Tonnage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Updated by workflow from Forecast Units</description>
    <label>Forecast Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>