force-app/main/default/objects/Forecast__c/fields/Forecast_Tonnage_Display__c.field-meta.xml
<CustomField>
    <fullName>Forecast_Tonnage_Display__c</fullName>
    <formula>Forecast_Tonnage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>