force-app/main/default/objects/Forecast__c/fields/Is_Current_Month__c.field-meta.xml
<CustomField>
    <fullName>Is_Current_Month__c</fullName>
    <formula>Month__r.Is_Current_Month__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Current Month?</label>
    <type>Checkbox</type>
</CustomField>