force-app/main/default/objects/Forecast__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <description>Forecast at Month level within Account</description>
    <label>Month</label>
    <referenceTo>Month__c</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>