force-app/main/default/objects/Forecast__c/fields/Month_No__c.field-meta.xml
<CustomField>
    <fullName>Month_No__c</fullName>
    <formula>VALUE( Month__r.Month_Number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month No</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>