force-app/main/default/objects/Forecast__c/fields/Prior_Month_Actual_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Actual_Tonnage__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Prior month actual tonnage total, updated by a trigger</description>
    <label>Prior Month Actual Tonnage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>