force-app/main/default/objects/Forecast__c/fields/Prior_Month_Actual_Total__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Actual_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Prior month actual units total, updated by a trigger</description>
    <label>Prior Month Actual Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>