force-app/main/default/objects/Forecast__c/fields/Prior_Month_Budget_Total__c.field-meta.xml
<CustomField>
    <fullName>Prior_Month_Budget_Total__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total of prior month&apos;s budgets, updated by a trigger</description>
    <label>Prior Month Budget Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>