force-app/main/default/objects/Forecast__c/fields/Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>Prior_Year__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This month actual units, prior year</description>
    <label>Prior Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>