force-app/main/default/objects/Forecast__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>Product this Forecast refers to</description>
    <label>Product</label>
    <referenceTo>Bottle__c</referenceTo>
    <relationshipLabel>Forecasts</relationshipLabel>
    <relationshipName>Forecasts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>