force-app/main/default/objects/Forecast__c/fields/Revised_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast__c</fullName>
    <label>Revised Forecast</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>