force-app/main/default/objects/Forecast__c/fields/Revised_Forecast_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast_Tonnage__c</fullName>
    <label>Revised Forecast Tonnage</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>