force-app/main/default/objects/Forecast__c/fields/Revised_Forecast_Variance__c.field-meta.xml
<CustomField>
    <fullName>Revised_Forecast_Variance__c</fullName>
    <formula>IF( Revised_Forecast__c = 0,0,Revised_Forecast__c - Forecast__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Revised Forecast Variance</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>