force-app/main/default/objects/Forecast__c/fields/SAP_Material_Code_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Material_Code_Name__c</fullName>
    <formula>SAP_Material_Code__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Material Code Name</label>
    <type>Text</type>
</CustomField>