force-app/main/default/objects/Forecast__c/fields/SAP_Model_Number__c.field-meta.xml
<CustomField>
    <fullName>SAP_Model_Number__c</fullName>
    <formula>Product__r.SAP_Model_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SAP Model Number</label>
    <type>Text</type>
</CustomField>