force-app/main/default/objects/Forecast__c/fields/T_Prior_Year__c.field-meta.xml
<CustomField>
    <fullName>T_Prior_Year__c</fullName>
    <description>This month actual tonnage, prior year</description>
    <label>T Prior Year</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>