force-app/main/default/objects/Forecast__c/fields/T_Revised_Forecast_Variance__c.field-meta.xml
<CustomField>
    <fullName>T_Revised_Forecast_Variance__c</fullName>
    <formula>IF( Revised_Forecast_Tonnage__c =0,0, Revised_Forecast_Tonnage__c - Forecast_Tonnage__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Revised Forecast Variance</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>