force-app/main/default/objects/Forecast__c/fields/T_Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Budget__c</fullName>
    <formula>Prior_Month_Budget_Tonnage__c + Budget_Tonnage__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Year Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>