force-app/main/default/objects/Forecast__c/fields/T_Year_Prior_Yr__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Prior_Yr__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Year to date actual tonnage, prior year</description>
    <label>T Year Prior Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>