force-app/main/default/objects/Forecast__c/fields/T_Year_Var_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>T_Year_Var_to_Budget__c</fullName>
    <formula>T_Year_Forecast__c -  T_Year_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Year Var to Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>