force-app/main/default/objects/Forecast__c/fields/Total_Actual_Tonnage__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Tonnage__c</fullName>
    <description>Total dispatched tonnage for this month and  product</description>
    <label>Total Actual Tonnage</label>
    <summarizedField>Dispatch__c.Tonnage__c</summarizedField>
    <summaryForeignKey>Dispatch__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>