force-app/main/default/objects/Forecast__c/fields/Total_Actual_Units__c.field-meta.xml
<CustomField>
    <fullName>Total_Actual_Units__c</fullName>
    <description>Total dispatched units for this month and  product</description>
    <label>Total Actual Units</label>
    <summarizedField>Dispatch__c.Units__c</summarizedField>
    <summaryForeignKey>Dispatch__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>