force-app/main/default/objects/Forecast__c/fields/Total_Tonnage_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Total_Tonnage_Rounded__c</fullName>
    <formula>Week_1_Tonnage_Rounded__c + Week_2_Tonnage_Rounded__c + Week_3_Tonnage_Rounded__c + Week_4_Tonnage_Rounded__c + Week_5_Tonnage_Rounded__c + Week_6_Tonnage_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>