force-app/main/default/objects/Forecast__c/fields/Total_Units_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Total_Units_Rounded__c</fullName>
    <formula>Week_1_Units_Rounded__c + Week_2_Units_Rounded__c + Week_3_Units_Rounded__c + Week_4_Units_Rounded__c + Week_5_Units_Rounded__c + Week_6_Units_Rounded__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>