force-app/main/default/objects/Forecast__c/fields/Week_1_Units__c.field-meta.xml
<CustomField>
    <fullName>Week_1_Units__c</fullName>
    <label>Week 1 Units</label>
    <summarizedField>Dispatch__c.Units__c</summarizedField>
    <summaryFilterItems>
        <field>Dispatch__c.Week_in_Month__c</field>
        <operation>equals</operation>
        <value>1</value>
    </summaryFilterItems>
    <summaryForeignKey>Dispatch__c.Forecast__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>