force-app/main/default/objects/Forecast__c/fields/Week_2_Units_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Week_2_Units_Rounded__c</fullName>
    <formula>ROUND( Week_2_Units__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Week 2</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>