force-app/main/default/objects/Forecast__c/fields/Week_3_Tonnage_Rounded__c.field-meta.xml
<CustomField>
    <fullName>Week_3_Tonnage_Rounded__c</fullName>
    <formula>ROUND( Week_3_Tonnage__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>T Week 3</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>