force-app/main/default/objects/Forecast__c/fields/Year_Budget__c.field-meta.xml
<CustomField>
    <fullName>Year_Budget__c</fullName>
    <formula>Prior_Month_Budget_Total__c + Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>