force-app/main/default/objects/Forecast__c/fields/Year_Forecast__c.field-meta.xml
<CustomField>
    <fullName>Year_Forecast__c</fullName>
    <formula>Prior_Month_Actual_Total__c + Forecast__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Forecast</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>