force-app/main/default/objects/Forecast__c/fields/Year_Prior_Yr__c.field-meta.xml
<CustomField>
    <fullName>Year_Prior_Yr__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Year to date actual units, prior year</description>
    <label>Year Prior Yr</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>