force-app/main/default/objects/Forecast__c/fields/Year_Var_to_Budget__c.field-meta.xml
<CustomField>
    <fullName>Year_Var_to_Budget__c</fullName>
    <formula>Year_Forecast__c -  Year_Budget__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year Var to Budget</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>