force-app/main/default/objects/Forecast__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Unique_ID__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Month__c</columns>
    <columns>Month_No__c</columns>
    <columns>Product__c</columns>
    <columns>SAP_Material_Code__c</columns>
    <columns>Prior_Month_Budget_Total__c</columns>
    <columns>Budget__c</columns>
    <columns>Forecast__c</columns>
    <columns>Budget_Tonnage__c</columns>
    <columns>Forecast_Tonnage__c</columns>
    <columns>Total_Actual_Units__c</columns>
    <columns>Total_Actual_Tonnage__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>